tdf#162279: Base Forms: details of the warning only on debug mode

As Mike noticed, the pb is more general than just Base forms.
So here's the general fix suggested by Mike (thank you for the help!)

Change-Id: Ic57039c9c37f26d2ea2d0e0bda89f277ba7044cf
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171337
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Tested-by: Jenkins
(cherry picked from commit 572011827a59e93448745294f3fe3eea3e028ffc)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171353